# huey-control-rs

./: Cargo.toml  README.md  api_connect.json  api_connect_post_body.json  discovery.json  lights.json
huey-cli/: Cargo.toml
huey-cli/src/: main.rs
huey-core/: Cargo.toml
huey-core/src/: lib.rs  light.rs
huey-egui/: Cargo.toml
huey-egui/src/: light_view.rs  main.rs  toggle_switch.rs
huey-iced/: Cargo.toml
huey-iced/src/: main.rs  tray.rs
light-rs-cli/: Cargo.toml
light-rs-cli/src/: main.rs
light-rs-core/: Cargo.toml
light-rs-core/example_json/: api_connect_failed.json
light-rs-core/src/: lib.rs  light.rs
light-rs-egui/: Cargo.toml
light-rs-egui/src/: light_view.rs  main.rs  toggle_switch.rs
light-rs-iced/: Cargo.toml
light-rs-iced/src/: main.rs  tray.rs
src/: huebridge.rs  lib.rs  light.rs  main.rs
