[package]
name = "huey-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
reqwest = { version = "0.11.14", features = [ "json" ]}
uuid = { version = "1.3.0", features = [ "v4", "fast-rng" ]}
thiserror = { version = "1.0.39" }
poll-promise = { version = "0.2.0", features = ["tokio"] }
tokio = { version = "1.26.0", features = ["full"] }

