[package]
name = "huey-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
huey-core = { path = "../huey-core/" }
tracing-subscriber = "0.3.16"
tokio = { version = "1.26.0", features = ["full"] }
eframe = { version = "0.21.3", features = ["default", "persistence"] }
poll-promise = { version = "0.2.0", features = ["tokio"] }
image = { version = "0.24" }
tray-icon = { version = "0.4.4" }
crossbeam-channel = "0.5"