[package]
name = "light-rs-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
light-rs-core = { path = "../light-rs-core" }
tokio = { version = "1.26.0", features = ["full"] }
