[package]
name = "light-rs-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
light-rs-core = { path = "../light-rs-core/" }
eframe = { version = "0.21.3", features = [ "persistence" ] }
tracing-subscriber = "0.3.16"
poll-promise = { version = "0.2", features = [ "tokio" ] }
tokio = { version = "1.26.0", features = ["full"] }